--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Sebastien Legault, Front-End & React Developer"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -24,7 +24,26 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Sebastien Legault</title>
+    <title>Sebastien Legault Portfolio</title>
+
+    <!-- Metadata for link preview -->
+    <meta
+      name="title"
+      property="og:title"
+      content="Sebastien Legault Portfolio"
+    />
+    <meta name="type" property="og:type" content="website/" />
+    <meta
+      name="image"
+      property="og:image"
+      content="../src/images/preview.png"
+    />
+    <meta name="url" property="og:url" content="https://sebastienlegault.com" />
+    <meta
+      name="description"
+      content="Sebastien Legault, Front-End & React Developer"
+    />
+
     <link rel="stylesheet" href="../src/style/sass/index.css" />
   </head>
   <body>
