fix for preview

--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Sebastien Legault, Front-End & React Developer"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="./icon.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -24,25 +20,34 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Sebastien Legault Portfolio</title>
 
-    <!-- Metadata for link preview -->
-    <meta
-      name="title"
-      property="og:title"
-      content="Sebastien Legault Portfolio"
-    />
-    <meta name="type" property="og:type" content="website/" />
-    <meta
-      name="image"
-      property="og:image"
-      content="../src/images/preview.png"
-    />
-    <meta name="url" property="og:url" content="https://sebastienlegault.com" />
+    <!-- Primary Meta Tags -->
+    <title>Sebastien Legault Portfolio</title>
+    <meta name="title" content="Sebastien Legault Portfolio" />
     <meta
       name="description"
       content="Sebastien Legault, Front-End & React Developer"
     />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://sebastienlegault.com/" />
+    <meta property="og:title" content="Sebastien Legault Portfolio" />
+    <meta
+      property="og:description"
+      content="Sebastien Legault, Front-End & React Developer"
+    />
+    <meta property="og:image" content="./preview.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://sebastienlegault.com/" />
+    <meta property="twitter:title" content="Sebastien Legault Portfolio" />
+    <meta
+      property="twitter:description"
+      content="Sebastien Legault, Front-End & React Developer"
+    />
+    <meta property="twitter:image" content="./preview.png" />
 
     <link rel="stylesheet" href="../src/style/sass/index.css" />
   </head>
